fix: align drag by the right side

--- a/src/components/TableSettingsColumn/TableSettingsColumn.scss
+++ b/src/components/TableSettingsColumn/TableSettingsColumn.scss
@@ -18,6 +18,10 @@ $block: '.#{variables.$ns}table-settings-column';
     &__drag-handle {
         cursor: grab;
         line-height: var(--g-text-body-short-line-height);
+        visibility: hidden;
+        margin-inline-start: auto;
+        display: flex;
+        width: 16px;
 
         &_unset-coursor {
             cursor: unset;
@@ -30,6 +34,13 @@ $block: '.#{variables.$ns}table-settings-column';
         display: flex;
         align-items: center;
         gap: var(--g-spacing-2);
+    }
+
+    &_sortable #{$block}__content:hover {
+        cursor: grab;
+        #{$block}__drag-handle {
+            visibility: visible;
+        }
     }
 
     &__vertical-spacer {
